--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -190,16 +190,16 @@
         </div>
         <button type="button" id="moveRight4" class="btn-nav">ᐅ</button>
       </div>
-      <!--<div class="justify-content-center align-items-start text-center">
+      <div class="justify-content-center align-items-start text-center">
         <div class="col-md-auto col-auto col-lg-auto">
-          <h1 class="category">I più votati</h1>
+          <h1 class="category">I più votati Di Sempre</h1>
         </div>
       </div>
       <div class="container container-c">
-        <button type="button" id="moveLeft4" class="btn-nav">ᐊ</button>
+        <button type="button" id="moveLeft5" class="btn-nav">ᐊ</button>
 
-        <div class="slider sl4" id="mySlider">
-          <div class="movie" id="main4" th:each="element : ${av}">
+        <div class="slider sl5" id="mySlider">
+          <div class="movie" id="main5" th:each="element : ${av}">
             <a>
               <img
                 class="img-mb"
@@ -209,8 +209,8 @@
             </a>
           </div>
         </div>
-        <button type="button" id="moveRight4" class="btn-nav">ᐅ</button>
-      </div>-->
+        <button type="button" id="moveRight5" class="btn-nav">ᐅ</button>
+      </div>
     </div>
 
     <footer class="">
@@ -240,6 +240,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="assets/js/carousel.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/country-states.js"></script>
     <script
