--- a/kaisenweb/src/main/resources/static/assets/css/carousel.css
+++ b/kaisenweb/src/main/resources/static/assets/css/carousel.css
@@ -232,6 +232,13 @@ body {
 #moveRight4 {
   right: 0;
 }
+#moveLeft5 {
+  left: 0;
+}
+
+#moveRight5 {
+  right: 0;
+}
 @media only screen and (max-width: 1100px) {
   .btn-nav {
     display: none;
