--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -31,12 +31,12 @@
   <body>
     <header>
       <section id="nav">
-        <nav class="navbar navbar-expand-lg sticky-top">
+        <nav class="navbar navbar-expand-lg fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="#home">
               <img
                 class="d-inline-block align-text-top pt-1 img-fluid"
-                src="assets/image/logo/logo.png"
+                src="assets/image/logo/k-logo.png"
                 alt=""
                 width="80"
                 height="60"
@@ -105,7 +105,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid mt-5 pt-lg-5">
       <div class="justify-content-center align-items-start text-center">
         <div class="col-md-auto col-auto col-lg-auto">
           <h1 class="pt-5 category">Popolari</h1>
