--- a/kaisenweb/src/main/resources/templates/error.html
+++ b/kaisenweb/src/main/resources/templates/error.html
@@ -35,7 +35,7 @@
             <a class="navbar-brand" href="#home">
               <img
                 class="d-inline-block align-text-top pt-1 img-fluid"
-                src="../assets/image/logo/logo.png"
+                src="../assets/image/logo/k-logo.png"
                 alt=""
                 width="80"
                 height="60"
