--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -213,6 +213,27 @@
         </div>
         <button type="button" id="moveRight5" class="btn-nav">ᐅ</button>
       </div>
+      <div class="justify-content-center align-items-start text-center">
+        <div class="col-md-auto col-auto col-lg-auto">
+          <h1 class="category">Ultimi Trailer</h1>
+        </div>
+      </div>
+      <div class="container container-c">
+        <button type="button" id="moveLeft5" class="btn-nav">ᐊ</button>
+
+        <div class="slider sl5" id="mySlider">
+          <div class="movie" id="main5" th:each="element : ${av}">
+            <a class="image" th:href="@{/movie/{id}(id=${element.key})}">
+              <img
+                class="img-mb"
+                th:src="@{${'https://image.tmdb.org/t/p/w220_and_h330_face/' + element.value}}"
+                alt=""
+              />
+            </a>
+          </div>
+        </div>
+        <button type="button" id="moveRight5" class="btn-nav">ᐅ</button>
+      </div>
     </div>
 
     <footer class="">
