--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -222,14 +222,50 @@
         <button type="button" id="moveLeft5" class="btn-nav">ᐊ</button>
 
         <div class="slider sl5" id="mySlider">
-          <div class="movie" id="main5" th:each="element : ${av}">
-            <a class="image" th:href="@{/movie/{id}(id=${element.key})}">
+          <div class="movie film" id="main5" th:each="element : ${av}">
+            <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
                 class="img-mb"
-                th:src="@{${'https://image.tmdb.org/t/p/w220_and_h330_face/' + element.value}}"
+                th:src="@{${'https://image.tmdb.org/t/p/w355_and_h200_multi_faces/dOqqnfLq1LFs7UlC9ZzMIgqbicu.jpg'}}"
                 alt=""
               />
             </a>
+            <div
+              class="modal fade"
+              id="exampleModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">
+                      Modal title
+                    </h1>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">...</div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-primary">
+                      Save changes
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <button type="button" id="moveRight5" class="btn-nav">ᐅ</button>
