--- a/kaisenweb/src/main/resources/static/assets/css/carousel.css
+++ b/kaisenweb/src/main/resources/static/assets/css/carousel.css
@@ -255,6 +255,13 @@ body {
 #moveRight5 {
   right: 0;
 }
+#moveLeft6 {
+  left: 0;
+}
+
+#moveRight6 {
+  right: 0;
+}
 @media only screen and (max-width: 1100px) {
   .btn-nav {
     display: none;
