--- a/kaisenweb/src/main/resources/static/assets/css/carousel.css
+++ b/kaisenweb/src/main/resources/static/assets/css/carousel.css
@@ -101,6 +101,9 @@ body {
   .img-mb {
     height: 70% !important;
   }
+  .trailer {
+    width: 200px !important;
+  }
   .container-c {
     height: 10.9rem;
   }
