--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="container container-c">
-        <button type="button" id="moveLeft" class="btn-nav">ᐊ</button>
+        <button type="button" id="moveLeft" class="btn-nav"><i class="fa-solid fa-caret-left"></i></button>
 
         <div class="slider" id="mySlider">
           <div class="movie" id="main" th:each="element : ${MovieTv}">
@@ -127,7 +127,7 @@
             </a>
           </div>
         </div>
-        <button type="button" id="moveRight" class="btn-nav">ᐅ</button>
+        <button type="button" id="moveRight" class="btn-nav"><i class="fa-solid fa-caret-right"></i></button>
       </div>
       <div class="justify-content-center align-items-start text-center">
         <div class="col-md-auto col-auto col-lg-auto">
@@ -135,7 +135,7 @@
         </div>
       </div>
       <div class="container container-c">
-        <button type="button" id="moveLeft2" class="btn-nav">ᐊ</button>
+        <button type="button" id="moveLeft2" class="btn-nav"><i class="fa-solid fa-caret-left"></i></button>
 
         <div class="slider sl2" id="mySlider">
           <div class="movie" id="main2" th:each="element : ${trending}">
@@ -148,7 +148,7 @@
             </a>
           </div>
         </div>
-        <button type="button" id="moveRight2" class="btn-nav">ᐅ</button>
+        <button type="button" id="moveRight2" class="btn-nav"><i class="fa-solid fa-caret-right"></i></button>
       </div>
       <div class="justify-content-center align-items-start text-center">
         <div class="col-md-auto col-auto col-lg-auto">
@@ -156,7 +156,7 @@
         </div>
       </div>
       <div class="container container-c">
-        <button type="button" id="moveLeft3" class="btn-nav">ᐊ</button>
+        <button type="button" id="moveLeft3" class="btn-nav"><i class="fa-solid fa-caret-left"></i></button>
 
         <div class="slider sl3" id="mySlider">
           <div class="movie" id="main3" th:each="element : ${upComing}">
@@ -169,7 +169,7 @@
             </a>
           </div>
         </div>
-        <button type="button" id="moveRight3" class="btn-nav">ᐅ</button>
+        <button type="button" id="moveRight3" class="btn-nav"><i class="fa-solid fa-caret-right"></i></button>
       </div>
       <div class="justify-content-center align-items-start text-center">
         <div class="col-md-auto col-auto col-lg-auto">
@@ -177,7 +177,7 @@
         </div>
       </div>
       <div class="container container-c">
-        <button type="button" id="moveLeft4" class="btn-nav">ᐊ</button>
+        <button type="button" id="moveLeft4" class="btn-nav"><i class="fa-solid fa-caret-left"></i></button>
 
         <div class="slider sl4" id="mySlider">
           <div class="movie" id="main4" th:each="element : ${cinema}">
@@ -190,7 +190,7 @@
             </a>
           </div>
         </div>
-        <button type="button" id="moveRight4" class="btn-nav">ᐅ</button>
+        <button type="button" id="moveRight4" class="btn-nav"><i class="fa-solid fa-caret-right"></i></button>
       </div>
       <div class="justify-content-center align-items-start text-center">
         <div class="col-md-auto col-auto col-lg-auto">
@@ -198,7 +198,7 @@
         </div>
       </div>
       <div class="container container-c">
-        <button type="button" id="moveLeft5" class="btn-nav">ᐊ</button>
+        <button type="button" id="moveLeft5" class="btn-nav"><i class="fa-solid fa-caret-left"></i></button>
 
         <div class="slider sl5" id="mySlider">
           <div class="movie" id="main5" th:each="element : ${av}">
@@ -211,7 +211,7 @@
             </a>
           </div>
         </div>
-        <button type="button" id="moveRight5" class="btn-nav">ᐅ</button>
+        <button type="button" id="moveRight5" class="btn-nav"><i class="fa-solid fa-caret-right"></i></button>
       </div>
       <div class="justify-content-center align-items-start text-center">
         <div class="col-md-auto col-auto col-lg-auto">
@@ -219,7 +219,7 @@
         </div>
       </div>
       <div class="container container-c">
-        <button type="button" id="moveLeft6" class="btn-nav">ᐊ</button>
+        <button type="button" id="moveLeft6" class="btn-nav"><i class="fa-solid fa-caret-left"></i></button>
 
         <div class="slider sl6" id="mySlider">
           <div class="movie film" id="main6" th:each="element : ${trailer}">
@@ -242,7 +242,7 @@
           </div>
         </div>
 
-        <button type="button" id="moveRight6" class="btn-nav">ᐅ</button>
+        <button type="button" id="moveRight6" class="btn-nav"><i class="fa-solid fa-caret-right"></i></button>
       </div>
     </div>
     <div
