--- a/kaisenweb/src/main/resources/static/assets/css/carousel.css
+++ b/kaisenweb/src/main/resources/static/assets/css/carousel.css
@@ -225,6 +225,7 @@ body {
 
 #moveLeft {
   left: 0;
+  margin-left: -12px;
 }
 
 #moveRight {
@@ -232,6 +233,7 @@ body {
 }
 #moveLeft2 {
   left: 0;
+  margin-left: -12px;
 }
 
 #moveRight2 {
@@ -239,6 +241,7 @@ body {
 }
 #moveLeft3 {
   left: 0;
+  margin-left: -12px;
 }
 
 #moveRight3 {
@@ -246,6 +249,7 @@ body {
 }
 #moveLeft4 {
   left: 0;
+  margin-left: -12px;
 }
 
 #moveRight4 {
@@ -253,6 +257,7 @@ body {
 }
 #moveLeft5 {
   left: 0;
+  margin-left: -12px;
 }
 
 #moveRight5 {
@@ -260,6 +265,7 @@ body {
 }
 #moveLeft6 {
   left: 0;
+  margin-left: -12px;
 }
 
 #moveRight6 {
@@ -318,4 +324,14 @@ body {
   left: 50%;
   font-size: 50px !important;
   transition: 0.3s;
+}
+.fa-caret-right {
+  position: absolute;
+  bottom: 33%;
+  font-size: 35px;
+}
+.fa-caret-left {
+  position: absolute;
+  bottom: 33%;
+  font-size: 35px;
 }
